--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -34,11 +34,14 @@ concurrency:
   group: '${{ github.workflow }}-${{ github.event.pull_request.number }}-${{ github.head_ref || github.ref }}'
 
 env:
-  REPO_OWNER: '${{ github.repository_owner }}'
-  REPO_NAME: '${{ github.event.repository.name }}'
-  PR_NUMBER: '${{ github.event.number }}'
-  # GUARDIAN_LOG_MODE: 'development'
-  # GUARDIAN_LOG_LEVEL: 'debug'
+  GITHUB_OWNER_NAME: '${{ github.event.repository.owner.login }}'
+  GITHUB_REPO_NAME: '${{ github.event.repository.name }}'
+  PULL_REQUEST_NUMBER: '${{ github.event.pull_request.number }}'
+  GUARDIAN_WIF_PROVIDER: 'projects/1098665030124/locations/global/workloadIdentityPools/guardian-automation/providers/guardian-ci-i'
+  GUARDIAN_WIF_SERVICE_ACCOUNT: 'guardian-automation-bot@ghg-guardian-ci-i-6ad437.iam.gserviceaccount.com'
+  GUARDIAN_BUCKET_NAME: 'guardian-ci-i-guardian-state-c79e1f4759'
+  GUARDIAN_TERRAFORM_VERSION: '1.7.0'
+
 
 jobs:
   init:
@@ -47,21 +50,46 @@ jobs:
       directories: '${{ steps.dirs.outputs.directories }}'
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11' # ratchet:actions/checkout@v4
         with:
           fetch-depth: 0 # get everything so we can use git diff
+          ref: '${{ github.event.pull_request.head.sha }}'
+
+      - name: 'Setup Go'
+        uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
+        with:
+          go-version: '1.21'
+
+      - name: 'Build Guardian Binary'
+        env:
+          INSTALL_PATH: '${{ runner.temp }}/.guardian'
+        run: |-
+          go build -o ${INSTALL_PATH}/guardian cmd/guardian/main.go
+          echo "${INSTALL_PATH}" >> $GITHUB_PATH
 
       - name: 'Guardian Directories'
         id: 'dirs'
-        uses: './.github/actions/directories'
-        with:
-          terraform_directory: 'terraform'
-          detect_plan_changes: 'true'
+        shell: 'bash'
+        env:
+          SOURCE_REF: '${{ github.event.pull_request.base.sha }}'
+          DEST_REF: '${{ github.event.pull_request.head.sha }}'
+        run: |-
+          DIRECTORIES=$(guardian entrypoints -detect-changes -source-ref="${SOURCE_REF}" -dest-ref="${DEST_REF}" -format=json ./.)
+          echo "entrypoints -> ${DIRECTORIES}"
+          echo "directories=${DIRECTORIES}" >> $GITHUB_OUTPUT
 
-      - name: 'Guardian Hide Previous Plan Comments'
-        uses: './.github/actions/hide-plan-comments'
-        with:
-          strategy: 'delete'
+      - name: 'Guardian Remove Previous Plan Comments'
+        shell: 'bash'
+        env:
+          # used to delete old comments on pull requests (access to only this repo)
+          REPO_TOKEN: '${{ github.token }}'
+        run: |-
+          guardian workflows remove-plan-comments \
+            -github-owner="${GITHUB_OWNER_NAME}" \
+            -github-repo="${GITHUB_REPO_NAME}" \
+            -github-token="${REPO_TOKEN}" \
+            -pull-request-number="${PULL_REQUEST_NUMBER}"
+
 
   plan:
     if: |
@@ -71,42 +99,14 @@ jobs:
     runs-on: 'ubuntu-latest'
     strategy:
       fail-fast: false
+      max-parallel: 100
       matrix:
         working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
-        with:
-          ref: '${{ github.event.repository.default_branch }}'
-          path: 'guardian-main'
-          sparse-checkout: 'guardian.env.yml'
-
-      - name: 'Load Env Vars'
-        uses: 'abcxyz/pkg/.github/actions/load-workflow-variables@main' # ratchet:exclude
-        with:
-          working_directory: '${{ matrix.working_directory }}'
-          filepath: './guardian-main/guardian.env.yml'
-          fail_on_missing: true
-
-      - name: 'Checkout'
-        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11' # ratchet:actions/checkout@v4
         with:
           ref: '${{ github.event.pull_request.head.sha }}'
-
-      - name: 'Setup Go'
-        uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
-        with:
-          go-version: '1.21'
-
-      - name: 'Mint Token'
-        id: 'mint-token'
-        uses: 'abcxyz/github-token-minter/.github/actions/mint-token@c6ea9b91e3e1df75a6e86dad8e5b0a0a45b42fec'
-        with:
-          wif_provider: '${{ vars.TOKEN_MINTER_WIF_PROVIDER }}'
-          wif_service_account: '${{ vars.TOKEN_MINTER_WIF_SERVICE_ACCOUNT }}'
-          service_audience: '${{ vars.TOKEN_MINTER_SERVICE_AUDIENCE }}'
-          service_url: '${{ vars.TOKEN_MINTER_SERVICE_URL }}'
-          requested_permissions: '{"repositories":["*"],"permissions":{"contents":"read"}}'
 
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@67e9c72af6e0492df856527b474995862b7b6591' # ratchet:google-github-actions/auth@v2
@@ -114,26 +114,41 @@ jobs:
           workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
           service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
-      - name: 'Git Config'
+      - name: 'Setup Terraform'
+        uses: 'abcxyz/secure-setup-terraform@4d361110d3718e05b118be20051ba2855a2cc9e1' # ratchet:abcxyz/secure-setup-terraform@main
+        with:
+          terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
+          terraform_module_location: './${{ matrix.working_directory }}'
+          terraform_lockfile_location: './${{ matrix.working_directory }}'
+          protect_lockfile: true
+          terraform_wrapper: false
+
+      - name: 'Setup Go'
+        uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
+        with:
+          go-version: '1.21'
+
+      - name: 'Build Guardian Binary'
+        env:
+          INSTALL_PATH: '${{ runner.temp }}/.guardian'
         run: |-
-          git config --global url."https://guardian-bot:${{ steps.mint-token.outputs.token }}@github.com".insteadOf "https://github.com"
+          go build -o ${INSTALL_PATH}/guardian cmd/guardian/main.go
+          echo "${INSTALL_PATH}" >> $GITHUB_PATH
 
       - name: 'Guardian Plan'
-        id: 'plan'
-        uses: './.github/actions/plan'
-        env:
-          GITHUB_TOKEN: '${{ steps.mint-token.outputs.token }}'
-        with:
-          working_directory: '${{ matrix.working_directory }}'
-          bucket_name: '${{ env.GUARDIAN_BUCKET_NAME }}'
-          terraform_version: '1.6.6'
-
-      - name: 'Print Plan Output'
         shell: 'bash'
         env:
-          PLAN_OUTPUT: '${{ steps.plan.outputs.has-diff }}'
+          DIRECTORY: '${{ matrix.working_directory }}'
+          # used to create comments on pull requests (access to only this repo)
+          REPO_TOKEN: '${{ github.token }}'
         run: |-
-          echo "PLAN_OUTPUT=${PLAN_OUTPUT}"
+          guardian plan run \
+          -github-owner="${GITHUB_OWNER_NAME}" \
+          -github-repo="${GITHUB_REPO_NAME}" \
+          -github-token="${REPO_TOKEN}" \
+          -pull-request-number="${PULL_REQUEST_NUMBER}" \
+          -bucket-name="${GUARDIAN_BUCKET_NAME}" \
+          "${DIRECTORY}"
 
   plan_success:
     if: '${{ always() }}'
@@ -143,11 +158,32 @@ jobs:
       - 'plan'
     steps:
       - name: 'Checkout'
-        uses: 'actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744' # ratchet:actions/checkout@v3
+        uses: 'actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11' # ratchet:actions/checkout@v4
+        with:
+          ref: '${{ github.event.pull_request.head.sha }}'
+
+      - name: 'Setup Go'
+        uses: 'actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568' # ratchet:actions/setup-go@v3
+        with:
+          go-version: '1.21'
+
+      - name: 'Build Guardian Binary'
+        env:
+          INSTALL_PATH: '${{ runner.temp }}/.guardian'
+        run: |-
+          go build -o ${INSTALL_PATH}/guardian cmd/guardian/main.go
+          echo "${INSTALL_PATH}" >> $GITHUB_PATH
 
       - name: 'Guardian Post Plan Status'
-        uses: './.github/actions/plan-status'
-        with:
-          context: 'test'
-          init_result: '${{ needs.init.result }}'
-          plan_result: '${{ needs.plan.result }}'
+        shell: 'bash'
+        env:
+          # used to create comments on pull requests (access to only this repo)
+          REPO_TOKEN: '${{ github.token }}'
+        run: |-
+          guardian workflows plan-status-comment \
+          -github-owner="${GITHUB_OWNER_NAME}" \
+          -github-repo="${GITHUB_REPO_NAME}" \
+          -github-token="${REPO_TOKEN}" \
+          -pull-request-number="${PULL_REQUEST_NUMBER}" \
+          -init-result="${{ needs.init.result }}" \
+          -plan-result="${{ needs.plan.result }}"
