Cleanup Run command API
Changed run command invocation.

old invocation method:
 ```
 guardian run -terraform-command="init" -terraform-args="-backend=false,-input=false" ./terraform/entrypoint
 ````
new invocation method:
```
guardian run -dir="./terraform/entrypoint" -- init –input=false -backend=false
```

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -295,6 +295,7 @@ jobs:
         shell: 'bash'
         run: |-
           guardian run \
-          -terraform-command="destroy" \
-          -terraform-args="-input=false,-auto-approve" \
-          "${DIRECTORY}"
+          -dir="${DIRECTORY}" \
+          -- destroy \
+          -input=false \
+          -auto-approve
