Make supplying terraform directory consistent
The `run` command was recently changed to supply the terraform directory
via a `-dir` flag. The `plan`, `apply`, and `entrypoints` commands have
been similarly updated so that supplying the terraform directory is consistent
across each of guardian's commands.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -183,7 +183,7 @@ jobs:
           -github-token="${REPO_TOKEN}" \
           -pull-request-number="${PULL_REQUEST_NUMBER}" \
           -bucket-name="${GUARDIAN_BUCKET_NAME}" \
-          "${DIRECTORY}"
+          -dir="${DIRECTORY}"
 
   plan_success:
     needs:
@@ -287,7 +287,7 @@ jobs:
           -github-token="${REPO_TOKEN}" \
           -pull-request-number="${PULL_REQUEST_NUMBER}" \
           -bucket-name="${GUARDIAN_BUCKET_NAME}" \
-          "${DIRECTORY}"
+          -dir="${DIRECTORY}"
 
       - name: 'Guardian Destroy'
         env:
