--- a/abc.templates/drift-workflows/spec.yaml
+++ b/abc.templates/drift-workflows/spec.yaml
@@ -18,6 +18,8 @@ kind: 'Template'
 desc: 'Generate the default set of Guardian workflows for drift detection.'
 
 inputs:
+  - name: 'gcp_organization_id'
+    desc: 'The Google Cloud organization to detect drift on.'
   - name: 'guardian_version'
     desc: 'The Guardian version to use'
     default: '0.1.0-beta4'
@@ -27,8 +29,9 @@ inputs:
     desc: 'The Google Cloud service account for Guardian'
     rules:
       - rule: 'gcp_matches_service_account(guardian_service_account)'
-  - name: 'gcp_organization_id'
-    desc: 'The Google Cloud organization to detect drift on.'
+  - name: 'guardian_ignore_dir_patterns'
+    desc: 'The list of directory patterns to ignore when detecting statefile drift'
+    default: ''
 
 steps:
   - desc: 'Include required files and directories'
@@ -45,11 +48,13 @@ steps:
       paths:
         - '.github/workflows'
       replacements:
+        - to_replace: 'REPLACE_ORGANIZATION_ID'
+          with: '{{.gcp_organization_id}}'
         - to_replace: 'REPLACE_GUARDIAN_VERSION'
           with: '{{.guardian_version}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_PROVIDER'
           with: '{{.guardian_wif_provider}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
           with: '{{.guardian_service_account}}'
-        - to_replace: 'REPLACE_ORGANIZATION_ID'
-          with: '{{.gcp_organization_id}}'
+        - to_replace: 'REPLACE_GUARDIAN_IGNORE_DIR_PATTERNS'
+          with: '{{.guardian_ignore_dir_patterns}}'
