Update abc templates
Updated the templates to use the CLI command syntax changes.

--- a/abc.templates/drift-workflows/contents/guardian-drift-detection.yml
+++ b/abc.templates/drift-workflows/contents/guardian-drift-detection.yml
@@ -101,6 +101,7 @@ jobs:
           REPO_TOKEN: '${{ github.token }}'
         run: |
           guardian drift statefiles \
+            -dir="./"
             -organization-id="$ORGANIZATION_ID" \
             -gcs-bucket-query="labels:terraform" \
             -github-token="$REPO_TOKEN" \
@@ -108,5 +109,4 @@ jobs:
             -github-repo="$GITHUB_REPO_NAME" \
             -github-issue-labels="guardian-statefile-drift,security" \
             -github-repo-terraform-topics="terraform,guardian" \
-            -ignore-dir-patterns="REPLACE_GUARDIAN_IGNORE_DIR_PATTERNS" \
-            ./
+            -ignore-dir-patterns="REPLACE_GUARDIAN_IGNORE_DIR_PATTERNS"
