--- a/abc.templates/base-workflows/spec.yaml
+++ b/abc.templates/base-workflows/spec.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: 'cli.abcxyz.dev/v1alpha1'
+apiVersion: 'cli.abcxyz.dev/v1beta3'
 kind: 'Template'
 
 desc: 'Generate the default set of Guardian workflows Terraform intrastructure repositories.'
@@ -23,9 +23,6 @@ inputs:
     default: '.'
   - name: 'terraform_version'
     desc: 'The Terraform version to use'
-  - name: 'guardian_version'
-    desc: 'The Guardian version to use'
-    default: '0.1.0-beta4'
   - name: 'guardian_wif_provider'
     desc: 'The Google Cloud workload identity federation provider for Guardian'
   - name: 'guardian_service_account'
@@ -54,11 +51,25 @@ steps:
           with: '{{.terraform_directory}}'
         - to_replace: 'REPLACE_TERRAFORM_VERSION'
           with: '{{.terraform_version}}'
-        - to_replace: 'REPLACE_GUARDIAN_VERSION'
-          with: '{{.guardian_version}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_PROVIDER'
           with: '{{.guardian_wif_provider}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
           with: '{{.guardian_service_account}}'
         - to_replace: 'REPLACE_GUARDIAN_STATE_BUCKET'
           with: '{{.guardian_state_bucket}}'
+        - to_replace: 'REPLACE_GUARDIAN_VERSION_TAG'
+          with: '{{._git_tag}}'
+
+  # TODO: once https://github.com/abcxyz/abc/pull/423 is available, switch to a rule requiring a '_git_tag' value
+  - desc: 'Print warning if rendered without git tag'
+    action: 'print'
+    if: '_git_tag == ""'
+    params:
+      message: |-
+        #
+        # WARNING ##############################
+        #
+        # The template was rendered without a valid git tag. For best compatibility, we recommended
+        # re-rendering this template using one of the latest tags at https://github.com/abcxyz/guardian/tags.
+        #
+        ########################################
