--- a/abc.templates/drift-workflows/spec.yaml
+++ b/abc.templates/drift-workflows/spec.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: 'cli.abcxyz.dev/v1alpha1'
+apiVersion: 'cli.abcxyz.dev/v1beta3'
 kind: 'Template'
 
 desc: 'Generate the default set of Guardian workflows for drift detection.'
@@ -20,9 +20,6 @@ desc: 'Generate the default set of Guardian workflows for drift detection.'
 inputs:
   - name: 'gcp_organization_id'
     desc: 'The Google Cloud organization to detect drift on.'
-  - name: 'guardian_version'
-    desc: 'The Guardian version to use'
-    default: '0.1.0-beta4'
   - name: 'guardian_wif_provider'
     desc: 'The Google Cloud workload identity federation provider for Guardian'
   - name: 'guardian_service_account'
@@ -50,11 +47,25 @@ steps:
       replacements:
         - to_replace: 'REPLACE_ORGANIZATION_ID'
           with: '{{.gcp_organization_id}}'
-        - to_replace: 'REPLACE_GUARDIAN_VERSION'
-          with: '{{.guardian_version}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_PROVIDER'
           with: '{{.guardian_wif_provider}}'
         - to_replace: 'REPLACE_GUARDIAN_WIF_SERVICE_ACCOUNT'
           with: '{{.guardian_service_account}}'
         - to_replace: 'REPLACE_GUARDIAN_IGNORE_DIR_PATTERNS'
           with: '{{.guardian_ignore_dir_patterns}}'
+        - to_replace: 'REPLACE_GUARDIAN_VERSION_TAG'
+          with: '{{._git_tag}}'
+
+        # TODO: once https://github.com/abcxyz/abc/pull/423 is available, switch to a rule requiring a '_git_tag' value
+        - desc: 'Print warning if rendered without git tag'
+          action: 'print'
+          if: '_git_tag == ""'
+          params:
+            message: |-
+              #
+              # WARNING ##############################
+              #
+              # The template was rendered without a valid git tag. For best compatibility, we recommended
+              # re-rendering this template using one of the latest tags at https://github.com/abcxyz/guardian/tags.
+              #
+              ########################################
