--- a/abc.templates/base-workflows/spec.yaml
+++ b/abc.templates/base-workflows/spec.yaml
@@ -32,6 +32,10 @@ inputs:
   - name: 'guardian_state_bucket'
     desc: 'The Google Cloud storage bucket for Guardian state'
 
+rules:
+  - rule: '_git_tag != ""'
+    message: 'this template must be rendered from a git tag'
+
 steps:
   - desc: 'Include required files and directories'
     action: 'include'
@@ -59,17 +63,3 @@ steps:
           with: '{{.guardian_state_bucket}}'
         - to_replace: 'REPLACE_GUARDIAN_VERSION_TAG'
           with: '{{._git_tag}}'
-
-  # TODO: once https://github.com/abcxyz/abc/pull/423 is available, switch to a rule requiring a '_git_tag' value
-  - desc: 'Print warning if rendered without git tag'
-    action: 'print'
-    if: '_git_tag == ""'
-    params:
-      message: |-
-        #
-        # WARNING ##############################
-        #
-        # The template was rendered without a valid git tag. For best compatibility, we recommended
-        # re-rendering this template using one of the latest tags at https://github.com/abcxyz/guardian/tags.
-        #
-        ########################################
