--- a/abc.templates/drift-workflows/spec.yaml
+++ b/abc.templates/drift-workflows/spec.yaml
@@ -30,6 +30,10 @@ inputs:
     desc: 'The list of directory patterns to ignore when detecting statefile drift'
     default: ''
 
+rules:
+  - rule: '_git_tag != ""'
+    message: 'this template must be rendered from a git tag'
+
 steps:
   - desc: 'Include required files and directories'
     action: 'include'
@@ -55,17 +59,3 @@ steps:
           with: '{{.guardian_ignore_dir_patterns}}'
         - to_replace: 'REPLACE_GUARDIAN_VERSION_TAG'
           with: '{{._git_tag}}'
-
-        # TODO: once https://github.com/abcxyz/abc/pull/423 is available, switch to a rule requiring a '_git_tag' value
-        - desc: 'Print warning if rendered without git tag'
-          action: 'print'
-          if: '_git_tag == ""'
-          params:
-            message: |-
-              #
-              # WARNING ##############################
-              #
-              # The template was rendered without a valid git tag. For best compatibility, we recommended
-              # re-rendering this template using one of the latest tags at https://github.com/abcxyz/guardian/tags.
-              #
-              ########################################
