--- a/abc.templates/drift-workflows/spec.yaml
+++ b/abc.templates/drift-workflows/spec.yaml
@@ -54,7 +54,7 @@ steps:
         - to_replace: 'REPLACE_GUARDIAN_IGNORE_DIR_PATTERNS'
           with: '{{.guardian_ignore_dir_patterns}}'
         - to_replace: 'REPLACE_GUARDIAN_VERSION_TAG'
-          with: '{{._git_tag}}'
+          with: '{{ slice ._git_tag 1 }}'
 
   # TODO: once https://github.com/abcxyz/abc/pull/423 is available, switch to a rule requiring a '_git_tag' value
   - desc: 'Print warning if rendered without git tag'
@@ -69,3 +69,5 @@ steps:
         # re-rendering this template using one of the latest tags at https://github.com/abcxyz/guardian/tags.
         #
         ########################################
+
+
