--- a/abc.templates/base-workflows/spec.yaml
+++ b/abc.templates/base-workflows/spec.yaml
@@ -31,6 +31,8 @@ inputs:
       - rule: 'gcp_matches_service_account(guardian_service_account)'
   - name: 'guardian_state_bucket'
     desc: 'The Google Cloud storage bucket for Guardian state'
+  - name: 'guardian_version'
+    desc: 'The version number' 
 
 steps:
   - desc: 'Include required files and directories'
@@ -58,7 +60,7 @@ steps:
         - to_replace: 'REPLACE_GUARDIAN_STATE_BUCKET'
           with: '{{.guardian_state_bucket}}'
         - to_replace: 'REPLACE_GUARDIAN_VERSION_TAG'
-          with: '{{._git_tag}}'
+          with: '{{slice .guardian_version 1}}'
 
   # TODO: once https://github.com/abcxyz/abc/pull/423 is available, switch to a rule requiring a '_git_tag' value
   - desc: 'Print warning if rendered without git tag'
