--- a/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-admin.yml
+++ b/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-admin.yml
@@ -41,7 +41,7 @@ concurrency:
 env:
   GITHUB_OWNER_NAME: '${{ github.event.repository.owner.login }}'
   GITHUB_REPO_NAME: '${{ github.event.repository.name }}'
-  GUARDIAN_VERSION: 'my-git-tag'
+  GUARDIAN_VERSION: 'v1.0.0'
   GUARDIAN_WIF_PROVIDER: 'my-guardian-wif-provider'
   GUARDIAN_WIF_SERVICE_ACCOUNT: 'my-guardian-service-account@abcxyz-my-project.iam.gserviceaccount.com'
   GUARDIAN_TERRAFORM_VERSION: '1.7.4'
