--- a/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-plan.yml
+++ b/abc.templates/base-workflows/testdata/golden/basic/data/.github/workflows/guardian-plan.yml
@@ -39,7 +39,7 @@ env:
   GITHUB_OWNER_NAME: '${{ github.event.repository.owner.login }}'
   GITHUB_REPO_NAME: '${{ github.event.repository.name }}'
   PULL_REQUEST_NUMBER: '${{ github.event.pull_request.number }}'
-  GUARDIAN_VERSION: 'my-git-tag'
+  GUARDIAN_VERSION: 'v1.0.0'
   GUARDIAN_WIF_PROVIDER: 'my-guardian-wif-provider'
   GUARDIAN_WIF_SERVICE_ACCOUNT: 'my-guardian-service-account@abcxyz-my-project.iam.gserviceaccount.com'
   GUARDIAN_BUCKET_NAME: 'my-guardian-state-bucket'
