--- a/abc.templates/drift-workflows/testdata/golden/basic/data/.github/workflows/guardian-drift-detection.yml
+++ b/abc.templates/drift-workflows/testdata/golden/basic/data/.github/workflows/guardian-drift-detection.yml
@@ -29,7 +29,7 @@ env:
   GITHUB_OWNER_NAME: '${{ github.event.repository.owner.login }}'
   GITHUB_REPO_NAME: '${{ github.event.repository.name }}'
   ORGANIZATION_ID: 'my-gcp-org-id'
-  GUARDIAN_VERSION: 'my-tag'
+  GUARDIAN_VERSION: 'v1.0.0'
   GUARDIAN_WIF_PROVIDER: 'my-guardian-wif-provider'
   GUARDIAN_WIF_SERVICE_ACCOUNT: 'my-guardian-service-account@abcxyz-my-project.iam.gserviceaccount.com'
 
