fix: add missing newline escape
Signed-off-by: Brian Bechtel <lock14@users.noreply.github.com>

--- a/abc.templates/drift-workflows/contents/guardian-drift-detection.yml
+++ b/abc.templates/drift-workflows/contents/guardian-drift-detection.yml
@@ -103,7 +103,7 @@ jobs:
           GITHUB_TOKEN: '${{ github.token }}'
         run: |
           guardian drift statefiles \
-            -dir="./"
+            -dir="./" \
             -organization-id="$ORGANIZATION_ID" \
             -gcs-bucket-query="labels:terraform" \
             -github-token="$GITHUB_TOKEN" \
