--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -15,12 +15,14 @@
 name: 'integration'
 
 on:
-  # pull_request_target: # removed pull_request_target to allow for testing of guardian within the guardian repository
   pull_request:
     types:
       - 'opened'
       - 'synchronize'
       - 'reopened'
+    branches:
+      - 'main'
+  push:
     branches:
       - 'main'
 
