--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -14,6 +14,8 @@
 
 # Create an annotated tag in the repo default branch.
 name: 'create_tag'
+run-name: 'create_tag - [${{ inputs.tag }}] [${{ inputs.message || inputs.tag }}]'
+
 
 on:
   workflow_dispatch:
