fix: enable quotations in input commands of guardian-admin.yml (#335)
Fixes #321.

--- a/abc.templates/base-workflows/contents/guardian-admin.yml
+++ b/abc.templates/base-workflows/contents/guardian-admin.yml
@@ -127,10 +127,9 @@ jobs:
 
       - name: 'Guardian Admin'
         env:
-          TERRAFORM_COMMAND: '${{ inputs.command }}'
           DIRECTORY: '${{ matrix.working_directory }}'
         shell: 'bash'
         run: |-
           guardian run \
           -dir="${DIRECTORY}" \
-          -- ${TERRAFORM_COMMAND}
+          -- ${{ inputs.command }}
