--- a/abc.templates/base-workflows/contents/guardian-run.yml
+++ b/abc.templates/base-workflows/contents/guardian-run.yml
@@ -145,7 +145,8 @@ jobs:
           guardian run -dir="${DIRECTORY}" -- apply -input=false -auto-approve
 
       - name: 'Guardian Cleanup'
-        if: always()
+        if: |
+          always()
         shell: 'bash'
         env:
           DIRECTORY: '${{ matrix.working_directory }}'
