--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -183,9 +183,10 @@ jobs:
           -pull-request-number="${PULL_REQUEST_NUMBER}" \
           -bucket-name="${GUARDIAN_BUCKET_NAME}" \
           -dir="${DIRECTORY}"
-      
+
       - name: 'Guardian Cleanup'
-        if: always()
+        if: |
+          always()
         shell: 'bash'
         run: |-
           guardian cleanup -dir="${{ matrix.working_directory }}"
@@ -306,7 +307,8 @@ jobs:
           -auto-approve
 
       - name: 'Guardian Cleanup'
-        if: always()
+        if: |
+          always()
         shell: 'bash'
         run: |-
           guardian cleanup -dir="${{ matrix.working_directory }}"
